fix cropping of ror-site image

--- a/app/styles/site.scss
+++ b/app/styles/site.scss
@@ -68,11 +68,19 @@
 
 .section-banner {
   z-index: 1;
-  margin-top: -20px;
   padding: 0;
+  margin: -20px 0 0 0;
+  width: 100%;
+  overflow: hidden; 
   
   img {
+    margin: -13% 0;
+    display: block;
     width: 100%;
-    max-height: 400px;
   }
+}
+
+p#copyright {
+  text-align: right;
+  font-size: 16px;
 }
